2010-11-15  Andrew John Hughes  <ahughes@redhat.com>

	PR classpath/42390
	* gnu/testlet/java/io/File/security.java:
	Add security manager checks for deleteOnExit,
	exists, canRead, isFile, isDirectory, isHidden,
	lastModified, length, canWrite, mkdir, mkdirs,
	setLastModified.

2010-11-15  Andrew John Hughes  <ahughes@redhat.com>

	PR classpath/42390
	* gnu/testlet/java/util/logging/LogManager/Security.java:
	Add test for addPropertyChangeListener and
	removePropertyChangeListener SecurityManager checks.

2010-11-15  Andrew John Hughes  <ahughes@redhat.com>

	PR classpath/42390
	* Makefile.in,
	* aclocal.m4,
	* configure: Regenerated.
	* gnu/testlet/java/io/ObjectOutputStream/security.java:
	Add tests for ObjectOutputStream(OutputStream)
	as reported in PR classpath/42390.

2010-05-11  Andrew John Hughes  <ahughes@redhat.com>

	PR classpath/43536
	* gnu/testlet/java/util/Collection/Test.java:
	New test ensuring all Collection implementations meet
	the requirements of remove(Object).

2009-09-24  Mario Torre  <neugens@aicas.com>

    * gnu/testlet/java/util/ResourceBundle/getBundle:
    Specify the parent classloader instead of using the system
    classloader by default.

2009-09-24  Mario Torre  <neugens@aicas.com>

    * gnu/testlet/org/omg/PortableInterceptor/Interceptor/testInterceptors:
    Remove checks for wontfix bug
    http://bugs.sun.com/view_bug.do?bug_id=6314176.

2009-09-24  Mario Torre  <neugens@aicas.com>

    * gnu/testlet/org/omg/PortableServer/POA/TestActivate:
    Remove inappropriate checks.

2009-07-09  Mario Torre  <neugens@aicas.com>

    * gnu/testlet/locales/LocaleTest:
    Fixed local variations in the use of the percentage sign.

2009-07-09  Mario Torre  <neugens@aicas.com>

    * gnu/testlet/java/beans/EventHandler/check14c.java:
    Pass incoming event object directly to the target action.

2009-07-09  Mario Torre  <neugens@aicas.com>

    * gnu/testlet/java/beans/EventHandler/check14c.java: