@@ -1,3 +1,10 @@
+2010-11-24  Andrew John Hughes  <ahughes@redhat.com>
+
+	PR classpath/42390
+	* gnu/testlet/java/security/ProtectionDomain/Security.java
+	New test to ensure toString() does a getPolicy
+	check when not in debugging mode.
+
 2010-11-15  Andrew John Hughes  <ahughes@redhat.com>
 
 	PR classpath/42390
